# computer_networks_teaching_platform_with_ai

./: .gitignore  LICENSE  manage.py  pyproject.toml
mainApp/: admin.py  chat.py  forms.py  models.py  urls.py  views.py
mainApp/management/commands/: populate_db.py
mainApp/migrations/: 0001_initial.py  0002_quiz_question_count.py  0003_alter_question_options_alter_quiz_options_and_more.py  0004_question_answer_1_question_answer_2_and_more.py  0005_course_usercourseprogress.py  0006_rename_usercourseprogress_courseprogress_and_more.py
mainApp/static/: styles.css
mainApp/templates/: ai_chat.html  assignments.html  base.html  dashboard.html  progress.html  quizzes.html  resources.html
mainApp/templates/courses/: application-protocols.html  base_course.html  course_chat.html  course_detail.html  course_list.html  network-design.html  network-management.html  network-security.html  osi-layers.html
mainApp/templates/quizzes/: quiz_chat.html  quiz_complete.html  quiz_list.html  solve_quiz.html
mainApp/templates/resources/: resources.html
mainApp/templates/user/: login.html  register.html
networkai/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: styles.css
