[project]
name = "networkai"
version = "0.1.0"
description = "Networkai teaching computer networks using ai "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-tailwind>=3.8.0",
    "django>=5.1.3",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.10",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "ollama>=0.4.3",
    "uvicorn>=0.33.0",
]
